# uol-oop-midterm-project

./: .gitignore  Bot.cpp  Bot.h  CMakeLists.txt  CSVReader.cpp  CSVReader.h  MathHelper.cpp  MathHelper.h  MerkelMain.cpp  MerkelMain.h  OrderBook.cpp  OrderBook.h  OrderBookEntry.cpp  OrderBookEntry.h  README.md  StringUtil.cpp  StringUtil.h  Wallet.cpp  main.cpp
